# trogon-todo

./: README.md  pyproject.toml
trogon_todo/: db.py  main.py  options.py  types.py
trogon_todo/commands/: clear_db.py  completion.py  create.py  delete.py  get.py  todo_list.py  update.py
